fix bug with visib.

--- a/src/styles/footer/footer.css
+++ b/src/styles/footer/footer.css
@@ -4,12 +4,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url('../../images/footer-bg.png');
+    background-image: url('../../images/footer-bg.svg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     padding: 65px 0 45px;
     gap: 3px;
     color: white;
-    overflow-x: hidden;
 }
