--- a/src/styles/pages/course/course.css
+++ b/src/styles/pages/course/course.css
@@ -3,7 +3,6 @@
   padding-top: 25vh;
   padding-bottom: 15vh;
   position: relative;
-  overflow: hidden;
 }
 
 .course::after {
@@ -31,7 +30,7 @@
   background-size: contain;
   background-repeat: repeat;
   background-position: center;
-  inline-size: 110%;
+  inline-size: 100%;
   block-size: 120%;
   top: 0%;
   left: 0;
