--- a/src/styles/pages/stories/stories.css
+++ b/src/styles/pages/stories/stories.css
@@ -26,8 +26,6 @@
 .stories__box {
   display: flex;
   justify-content: space-around;
-  align-items: start;
-  flex-wrap: nowrap;
   margin: 35px 0 0;
   scroll-snap-type: x mandatory; /* Привязка к ближайшему элементу */
   scroll-behavior: smooth; /* Плавная прокрутка */
